package ru.ubunterro.servicehelper;

import android.support.v7.app.AppCompatActivity;
import android.os.Bundle;

public class DeviceHistoryActivity extends AppCompatActivity {

    @Override
    protected void onCreate(Bundle savedInstanceState) {
        super.onCreate(savedInstanceState);
        setContentView(R.layout.activity_device_history);
    }
}