package ru.ubunterro.servicehelper;

import android.support.v7.app.AppCompatActivity;
import android.os.Bundle;

public class WarehouseItemActivity extends AppCompatActivity {

    @Override
    protected void onCreate(Bundle savedInstanceState) {
        super.onCreate(savedInstanceState);
        setContentView(R.layout.activity_warehouse_item);
    }
}